# spark-housing-price-predictor

./: .gitignore  01_feat_eng.ipynb  Dockerfile  Makefile  README.md  Untitled.ipynb  house_price_predictor.postman_collection.json  main.py  pyproject.toml  test.py
data/house_data_with_nulls.parquet/: part-00000-10cc4e1e-0499-4c29-accf-a4f7ff5379d2-c000.snappy.parquet
feature_engineering/: zipcode_ranker.py
house_price_predictor/: evaluation.py  schema.py
house_price_predictor/features/: pipeline.py  sql_transformers.py  zipcode_ranker.py
house_price_predictor/server/: main.py
models/best_model/metadata/: part-00000
models/best_model/stages/0_ZipCodeRankerModel_d7714989d4cd/: price_ranks.json
models/best_model/stages/0_ZipCodeRankerModel_d7714989d4cd/metadata/: part-00000
models/best_model/stages/1_SQLTransformer_4c863fd3f633/metadata/: part-00000
models/best_model/stages/2_SQLTransformer_be57df2a18bf/metadata/: part-00000
models/best_model/stages/3_SQLTransformer_9df5d98d3747/metadata/: part-00000
models/best_model/stages/4_Imputer_88eeb22f4896/data/: part-00000-c5ba12ab-34c8-4b95-8388-a61d4a3afe0e-c000.snappy.parquet
models/best_model/stages/4_Imputer_88eeb22f4896/metadata/: part-00000
models/best_model/stages/5_VectorAssembler_3717296f0b74/metadata/: part-00000
models/best_model/stages/6_StandardScaler_9c351a210b2f/data/: part-00000-47127473-92c6-4354-92dd-1d7c8877df71-c000.snappy.parquet
models/best_model/stages/6_StandardScaler_9c351a210b2f/metadata/: part-00000
models/lr-1672019228/metadata/: part-00000
(+24 files in other folders)
