[tool.poetry]
name = "funda-assignment"
version = "0.1.0"
description = ""
authors = ["MLobo1997 <miguel.lobo@feedzai.com>"]

[tool.poetry.dependencies]
python = "^3.8"
jupyterlab = "^3.5.2"
numpy = "^1.24.0"
pandas = "^1.5.2"
pyspark = "^3.3.1"
plotly = "^5.11.0"
seaborn = "^0.12.1"
statsmodels = "^0.13.5"
fastapi = "^0.88.0"
uvicorn = "^0.20.0"
pydantic = "^1.10.2"

[tool.poetry.dev-dependencies]
black = "^22.12.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
